[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
mutagen = "^1.45.1"
gunicorn = "^20.1.0"
asgiref = "^3.4.1"
Flask-Session = "^0.4.0"
yt-dlp = "2023.03.04"
aiohttp = "^3.8.4"
isort = "^5.12.0"
black = "^23.3.0"
cffi = "^1.15.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"